--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ p {
     font-size: 1.2em;
 }
 .search-container{
-    border: 3px solid #ddd;
+    border: 1px solid #999; 
     border-radius: 10px;
     background-color: white;
     position: sticky;
@@ -65,7 +65,7 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #ddd;
+    border: 1px solid #999; 
     border-radius: 10px;
     padding: 20px;
     background-color: white;
