--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ p {
         position: relative;
     }
     .weather-details{
-        width: 90%;
+        width: auto;
         grid-template-columns: 1fr;
     }
     .child{
